# mewcode

./: .gitignore  README.md  llm_providers.yaml  pyproject.toml
docs/ch01/: checklist.md  plan.md  spec.md  tasks.md
docs/ch02/: checklist.md  plan.md  spec.md  tasks.md
docs/ch03/: checklist.md  evaluation.md  plan.md  spec.md  tasks.md
docs/ch04/: checklist.md  evaluation.md  spec.md
docs/ch05/: evaluation.md  spec.md
docs/ch06/: evaluation.md  spec.md
docs/ch07/: evaluation.md  spec.md
docs/ch08/: evaluation.md  spec.md
docs/ch09/: spec.md  (+1 more)
integration_tests/: __init__.py  cache_report.py  test_deepseek_streaming.py  test_prompt_cache.py
tests/: conftest.py  test_agent_context.py  test_agent_events.py  test_agent_loop.py  test_agent_usage.py  test_anthropic_provider.py  test_app.py  test_cache_report.py  test_cli.py  test_command_builtins.py  test_command_controller.py  test_command_registry.py  test_config.py  test_context_artifacts.py  test_context_estimator.py  test_context_manager.py  test_context_projection.py  test_context_summarizer.py  test_history.py  test_hook_actions.py  test_hook_engine.py  test_hook_integration.py  test_hook_loader.py  test_hook_matching.py  test_instruction_loader.py  test_mcp_adapter_manager.py  test_mcp_client.py  test_mcp_config.py  test_mcp_end_to_end.py  test_mcp_http_transport.py  test_mcp_protocol.py  test_mcp_stdio_transport.py  test_models.py  test_notes_manager.py  test_notes_storage.py  test_notes_updater.py  test_openai_provider.py  test_prompt_builtins.py  test_prompt_composer.py  test_prompt_environment.py  (+43 more)
(+144 files in other folders)
