[project]
name = "mewcode-agent"
version = "0.1.0"
description = "A streaming terminal chat client for DeepSeek APIs"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "anthropic>=0.116.0",
    "httpx>=0.28.1",
    "jsonschema>=4.26.0",
    "openai>=2.45.0",
    "pyyaml>=6.0.3",
    "textual>=8.2.8",
]

[project.scripts]
mewcode-agent = "mewcode_agent.cli:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = ["--basetemp=.pytest-tmp"]
asyncio_mode = "auto"
markers = [
    "integration: calls the real DeepSeek API",
]
